change registration form format to be one column, allow Input to be autofocused (support for modern browsers), make margin between form rows larger to prevent error/helper text that may appear in adjacent rows from overlapping

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -11,7 +11,8 @@ form {
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-top: 2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     padding: 1.35rem .75rem .4rem 1rem;
     border-radius: .35rem .35rem 0 0;
     border-bottom: solid 1px #aaa;
@@ -80,8 +81,8 @@ form {
 
 .mask {
     position: absolute;
-    top: -1.2rem;
-    left: 1rem;
+    bottom: calc(100% + .5rem);
+    right: .5rem;
 }
 
 .form-button {
